Applying style to all Pages

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Index</title>
+    <link href="OurStyle.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Index Page </h1>
