--- a/Display.html
+++ b/Display.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Display</title>
+    <link href="OurStyle.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Display Page </h1>
