--- a/OurSecond.html
+++ b/OurSecond.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="OurStyle.css" rel="stylesheet" />
 </head>
 <body>
 <h1>Second Page </h1>
